--- a/src/app/features/components/student/student.component.html
+++ b/src/app/features/components/student/student.component.html
@@ -1,8 +1,7 @@
-<div class=" ">
+<!-- <div class=" ">
     @if(status){
     <h2>Student List</h2>
     <div class="container p-4  ">
-        <!-- <form class="form form-control"> -->
         <label for="std.id" class=" form-control">ID
         <input type="text" class="form form-control" [(ngModel)]="std.id"/></label>
         <label for="std.name " class="form-control">Name
@@ -14,16 +13,10 @@
         <label for="std.email" class="form-control">Email
         <input type="text" class="form-control"  [(ngModel)]="std.email"/>
         </label>
-        <label for="std.phone" class="form-control">Phone
-        <input type="text" class="form-control" [(ngModel)]="std.phone"/>
-        </label>
-        <label for="std.address" class="form-control">Address
-        <input type="text" class="form-control" [(ngModel)]="std.address"/>
-        </label>
+       
         <div class="form-control form">
             <button class="btn btn-success  pe-4  text-center " (click)="addStudent()">Add</button>
         </div>
-    <!-- </form> -->
     </div>
 
     }@else{ 
@@ -44,12 +37,7 @@
             <label for="std.email" class="form-control">Email
             <input type="text" class="form-control" [(ngModel)]="EditStd.email"/>
             </label>
-            <label for="std.phone" class="form-control">Phone
-            <input type="number" class="form-control" [(ngModel)]="EditStd.phone"/>
-            </label>
-            <label for="std.address" class="form-control">Address
-            <input type="text" class="form-control" [(ngModel)]="EditStd.address"/>
-            </label>
+            
         </div>
         <div class="form-control form">
             <button class="btn btn-success  pe-4  text-center " (click)="updateStudent()">Update</button>
@@ -75,8 +63,7 @@
                 <td>{{student.name}}</td>
                 <td>{{student.age}}</td>
                 <td>{{student.email}}</td>
-                <td>{{student.phone}}</td>
-                <td>{{student.address}}</td>
+          
                 <td>
                     <button class="btn btn-secondary  p-2 m-2" (click)="editStudent(student.id)">Edit</button>
                     <a class=" btn btn-danger p-2 m-2 " (click)="deleteStudent(student.id)">Delete</a>
@@ -86,4 +73,4 @@
         </tbody>
     </table>
 
-</div>
+</div> -->
