--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -24,10 +24,9 @@
                @if(accService.isLoggedIn){
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="[ '/deptList' ]">DepartmentService</a>
-                </li>
-               
+                </li>    
                 <li class="nav-item">
-                    <a class="nav-link" [routerLink]="[ '/studentList' ]">StudentService</a>
+                    <a class="nav-link" [routerLink]="[ '/student/list' ]">StudentService</a>
                 </li>
                 
                 <li class="nav-item">
