using httpClient to connect backend

--- a/src/app/core/access-denied/access-denied.component.html
+++ b/src/app/core/access-denied/access-denied.component.html
@@ -1,10 +1,14 @@
-<div class="container">
+<div class="container ">
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="access-denied text-center">
           <h1>Access Denied</h1>
           <p>You do not have permission to view this page.</p>
-           <h2 class="text-danger "> Redirect to Home Page.....</h2>
+           <h2 class="text-danger  "> Redirect to Home Page.....</h2>
+           <br>
+           <br>
+        
+           <h2 class="text-alert spinner-border "> Redirect to Home Page.....</h2>
         </div>
       </div>
     </div>
