improve baseUrl injection

--- a/src/app/features/department/components/department-add/department-add.component.html
+++ b/src/app/features/department/components/department-add/department-add.component.html
@@ -2,12 +2,12 @@
 <div class="container border d-flex  flex-column  ">
     <!-- <form class="form form-control"> -->
     <label for="std.id" class=" p-3">ID
-    <input type="number" class="form form-control" [(ngModel)]="dept.id"/></label>
+    <input type="number" class="form form-control" [(ngModel)]="dept.dept_Id"/></label>
     <label for="std.name " class="p-3">Name
-    <input type="text" class="form-control " [(ngModel)]="dept.name"/>
+    <input type="text" class="form-control " [(ngModel)]="dept.dept_Name"/>
     </label>
     <label for="std.description" class="p-3">description
-    <input type="text" class="form-control" [(ngModel)]="dept.description"/>
+    <input type="number" class="form-control" [(ngModel)]="dept.noofStudents"/>
     </label>
   
  
