--- a/src/app/features/department/components/department-edit/department-edit.component.html
+++ b/src/app/features/department/components/department-edit/department-edit.component.html
@@ -6,27 +6,33 @@
                 <div class="card-header">
                     <h3>Department Details</h3>
                 </div>
+                @if(department!=null){
+
                 <div class="card-body">
+                        
+                    
                     <div class="form-group">
                         <label for="id">ID</label>
-                        <input type="text" class="form-control" id="id" name="id" [(ngModel)]="department.id" readonly >
+                        <input type="text" class="form-control" id="id" name="id" [(ngModel)]="department.dept_Id" readonly >
                     </div>
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" name="name" [(ngModel)]="department.name" >
+                        <input type="text" class="form-control" id="name" name="name" [(ngModel)]="department.dept_Name" >
                     </div>
                     <div class="form-group">
                         <label for="description">Description</label>
-                        <input type="text" class="form-control" id="description" name="description" [(ngModel)]="department.description" >
+                        <input type="text" class="form-control" id="description" name="description" [(ngModel)]="department.noofStudents" >
                     </div>
+
                 </div>
+            }
                 <div class="card-footer">
                     <a class="btn btn-primary" (click)="save()" >Edit</a>
                     <a class="btn btn-secondary" [routerLink]="[ '/deptList' ]">Back</a>
 
                     
                 </div>
-                
+            
             </div>
         </div>
     </div>
