--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid m-auto d-flex flex-column" style="min-height: 100vh;">
+<div class="container-fluid m-auto d-flex flex-column mt-4" style="min-height: 100vh;">
     <!-- <app-header></app-header>
     <div class="mt-2 mb-2  container m-auto d-flex flex-column p-4 border-dark  " style="min-height: 60vh;">
         <router-outlet></router-outlet>
